kubernetes/client/traefik-ingress-client.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: twig-ingress-client
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`staging.twigslot.com`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  # tls:
  #   certResolver: myresolver
  #   domains: 
  #   - main: staging.twigslot.com
